# adventofcode

./: .ghci  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Project.toml  README.md  adventofcode.cabal  day10.py  day20.py  hello.py  hie.yaml  package.yaml  pyproject.toml  setup.py
.github/workflows/: bench.yml  bench.yml.off  haskell.yml  tests.yml
aoc/: Cargo.toml
aoc-derive/: Cargo.toml
aoc-derive/src/: lib.rs
aoc/src/: algorithm.rs  api.rs  counter.rs  error.rs  helpers.rs  input.rs  input_handler.rs  lib.rs  main.rs  parsers.rs  runner.rs  solver.rs  template.rs
aoc/src/y2023/: _template.rs  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  mod.rs
cli/: Cargo.toml
cli/benches/: benchmark.rs
cli/src/: config.rs  days.rs  download.rs  error.rs  lib.rs  main.rs  template.rs
day1/: day1.cpp  day1.out
day10/: day10a.cpp  day10b.cpp
day11/: day11.cpp  day11.hpp
day12/: day12.hpp  day12a.cpp  day12b.cpp
day13/: day13.hpp  day13a.cpp  day13b.cpp
day14/: day14.cpp  day14a.cpp
day15/: day15.cpp  day15.hpp  day15.txt
day16/: day16a.cpp  day16b.cpp
day17/: day17.cpp  day17.hpp
day18/: day18.cpp  day18.txt  day18b.txt
day19/: day19.cpp  day19.hpp
day2/: day2.hpp  day2.txt  day2a.cpp  day2b.cpp
day20/: day20.txt  day20a.cpp  day20b.cpp  test1.txt  test2.txt  test3.txt
day21/: day21.cpp
day22/: day22.cpp  test.txt
day23/: day23.py  day23.txt
day24/: day24.cpp  day24.py
day25/: day25.py  steps.txt
day3/: day3a.cpp  day3b.cpp
day4/: day4a.cpp  day4b.cpp
day5/: day5.cpp  day5.hpp  day5a.txt  day5b.txt  test1.txt
day6/: day6.txt  day6a.cpp  day6b.cpp
day7/: day7.hpp  day7a.cpp  day7b.cpp
day8/: day8a.cpp  day8b.cpp  problem.txt
day9/: day9.hpp  day9a.cpp  day9b.cpp  problem.txt  test4.txt
days/: .gitignore  Day01.hs  Day01a.hs  Day01b.hs  day.hs  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs
days/2022/01/: Cargo.toml  main.rs
days/2022/01/src/: main.rs
days/_template/: Cargo.toml
days/_template/src/: lib.rs
days/day01/: Cargo.toml
days/day01/src/: lib.rs
days/day02/: Cargo.toml
days/day02/src/: lib.rs
days/day03/: Cargo.toml
days/day03/src/: lib.rs
days/day04/: Cargo.toml
days/day04/src/: lib.rs
days/day05/: Cargo.toml
days/day05/src/: lib.rs
days/day06/: Cargo.toml
days/day06/src/: lib.rs
days/day07/: Cargo.toml
days/day07/src/: lib.rs
days/day08/: Cargo.toml
days/day08/src/: lib.rs
days/day09/: Cargo.toml
days/day09/src/: lib.rs
days/day10/: Cargo.toml
days/day10/src/: lib.rs
days/day11/: Cargo.toml
days/day11/src/: lib.rs
days/day12/: Cargo.toml
days/day12/src/: lib.rs
days/day13/: Cargo.toml
days/day13/src/: lib.rs
days/day14/: Cargo.toml
days/day14/src/: lib.rs
days/day15/: Cargo.toml
days/day15/src/: lib.rs
days/day16/: Cargo.toml
days/day16/src/: lib.rs
days/day17/: Cargo.toml
days/day17/src/: lib.rs
days/day18/: Cargo.toml
days/day18/src/: lib.rs
days/day19/: Cargo.toml
days/day19/src/: lib.rs
days/day20/: Cargo.toml
days/day20/src/: lib.rs
days/day21/: Cargo.toml
days/day21/src/: lib.rs
days/day22/: Cargo.toml
days/day22/src/: lib.rs
days/day23/: Cargo.toml
days/day23/src/: lib.rs
days/day24/: Cargo.toml
days/day24/src/: lib.rs
days/day25/: Cargo.toml
days/day25/src/: lib.rs
days/template/: Cargo.toml  main.rs
days/template/src/: main.rs
exec/: aoc.hs
frontend/: Cargo.toml
frontend/src/: days.rs  download.rs  lib.rs  main.rs  template.rs
haskell/: day1.hs  day2.hs
include/aoc/: algorithm.hpp  algorithms.hpp  aoc.hpp  graph.hpp  hash.hpp  io.hpp  registry.hpp  remote.hpp  runner.hpp  testing.hpp  types.hpp
inputs/: day15
inputs/tests/day01/: a01.out
src/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  Advent.hs  AdventOfCode.jl  CMakeLists.txt  day01.jl  download.rs  error.rs  lib.rs  main.rs  solver.rs  template.cpp
src/2022/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
src/Advent/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day19Original.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Solver.hs
src/advent/: __init__.py  core.py  io.py
src/advent/year2015/: day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
src/aoc/: cli.cpp  registry.cpp  remote.cpp  runner.cpp
src/days/: day01.rs
test/: runtests.jl
tests/: CMakeLists.txt  CheckDay01.hs  CheckDay02.hs  CheckDay03.hs  CheckDay04.hs  CheckDay05.hs  CheckDay06.hs  test.hs  test_io.cpp  test_runner.cpp
