[package]
name = "aoc"
version = "0.2022.0"
authors = ["Dan F-M <foreman.mackey@gmail.com>"]
license = "Apache-2.0"
description = "Holiday hacking"
repository = "https://github.com/dfm/adventofcode"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.66"
reqwest = { version = "0.11.12", features = ["blocking"] }
toml_edit = "0.15.0"
clap = { version = "4.0.18", features = ["derive"] }

[[bin]]
name = "aoc"
path = "src/main.rs"
