[package]
name = "aoc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
# Automatically discover solution implementations
aoc-derive = { path = "../aoc-derive" }

# CLI
clap = { version = "4.4.8", features = ["derive"] }
thiserror = "1.0.50"
anyhow = "1.0.75"
chrono = "0.4.31"
dirs = "5.0.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
rpassword = "7.3.1"

# Solution dependencies
nom = "7.1.3"
