[package]
name = "aoc-cli"
version = "0.2021.0"
authors = ["Dan F-M <foreman.mackey@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Holiday hacking"
repository = "https://github.com/dfm/adventofcode"

[dependencies]
clap = "2.33"
toml_edit = "0.6"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
regex = "1.5"
aoc = { path = "../aoc" }
aoc-day01 = { path = "../days/day01" }
aoc-day02 = { path = "../days/day02" }
aoc-day03 = { path = "../days/day03" }
aoc-day04 = { path = "../days/day04" }
aoc-day05 = { path = "../days/day05" }
