[package]
name = "aoc-cli"
version = "0.2021.0"
authors = ["Dan F-M <foreman.mackey@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Holiday hacking"
repository = "https://github.com/dfm/adventofcode"

[lib]
doctest = false

[dependencies]
clap = "2.33"
toml_edit = "0.6"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
regex = "1.5"
criterion = "0.3"
aoc = { path = "../aoc" }
aoc-day01 = { path = "../days/day01" }
aoc-day02 = { path = "../days/day02" }
aoc-day03 = { path = "../days/day03" }
aoc-day04 = { path = "../days/day04" }
aoc-day05 = { path = "../days/day05" }
aoc-day06 = { path = "../days/day06" }
aoc-day07 = { path = "../days/day07" }
aoc-day08 = { path = "../days/day08" }
aoc-day09 = { path = "../days/day09" }
aoc-day10 = { path = "../days/day10" }
aoc-day11 = { path = "../days/day11" }
aoc-day12 = { path = "../days/day12" }
aoc-day13 = { path = "../days/day13" }
aoc-day14 = { path = "../days/day14" }
aoc-day15 = { path = "../days/day15" }

[[bench]]
name = "benchmark"
harness = false
